--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">MealsMenu</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="catalog">Catalog</string>
+    <string name="home">Home</string>
+    <string name="reserve">Reserve</string>
+    <string name="favorite">Favourite</string>
+    <string name="more">More</string>
 </resources>
