feature: add abstract BaseCategoryFragment and ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="reserve">Reserve</string>
     <string name="favorite">Favourite</string>
     <string name="more">More</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="starter">Starter</string>
+    <string name="dessert">Dessert</string>
 </resources>
