feature: refresh color and add meal details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="breakfast">Breakfast</string>
     <string name="starter">Starter</string>
     <string name="dessert">Dessert</string>
+    <string name="serve">Serve</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="meal_name">meal_name</string>
+    <string name="instruction">Instruction</string>
 </resources>
