--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="ingredients">Ingredients</string>
     <string name="meal_name">meal_name</string>
     <string name="instruction">Instruction</string>
+    <string name="not_found">Not Found!</string>
 </resources>
